trabajando en js

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                 <img src="" class="img-fluid" alt="fotoPrincipal">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12">
-                        <h3 class="subtitulo">democracia</h3>
+                        <h3 class="titulo"></h3>
+                        <span class="colegio"></span>
                         <p class="sub-descripcion">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                             nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
@@ -82,7 +83,8 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12">
-                        <h3 class="subtitulo">democracia</h3>
+                        <h3 class="titulo"></h3>
+                        <span class="colegio"></span>
                         <p class="sub-descripcion">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                             nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
@@ -93,7 +95,8 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12">
-                        <h3 class="subtitulo">democracia</h3>
+                        <h3 class="titulo"></h3>
+                        <span class="colegio"></span>
                         <p class="sub-descripcion">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                             nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
