--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@
     <div class="container">
         <section class="row">
             <div class="col-lg-10 col-md-10 col-sm-12 col-12">
-                <img src="" class="img-fluid" alt="fotoPrincipal">
+                <img src="" class="img-fluid mx-auto d-block" id="foto" alt="fotoPrincipal">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <h3 class="titulo"></h3>
-                        <span class="colegio"></span>
+                        <span class="categoria"></span>
+                        <span class="fecha"></span>
                         <p class="sub-descripcion">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                             nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
@@ -84,7 +85,8 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <h3 class="titulo"></h3>
-                        <span class="colegio"></span>
+                        <span class="categoria"></span>
+                        <span class="fecha"></span>
                         <p class="sub-descripcion">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                             nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
@@ -96,7 +98,8 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <h3 class="titulo"></h3>
-                        <span class="colegio"></span>
+                        <span class="categoria"></span>
+                        <span class="fecha"></span>
                         <p class="sub-descripcion">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                             nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
