--- a/index.html
+++ b/index.html
@@ -74,12 +74,7 @@
                         <h3 class="titulo"></h3>
                         <span class="categoria"></span>
                         <span class="fecha"></span>
-                        <p class="sub-descripcion">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                            anim id est laborum."</p>
+                        <p class="sub-descripcion"></p>
                     </div>
                 </div>
                 <div class="row">
@@ -87,12 +82,7 @@
                         <h3 class="titulo"></h3>
                         <span class="categoria"></span>
                         <span class="fecha"></span>
-                        <p class="sub-descripcion">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                            anim id est laborum."</p>
+                        <p class="sub-descripcion"></p>
                     </div>
                 </div>
                 <div class="row">
@@ -100,12 +90,7 @@
                         <h3 class="titulo"></h3>
                         <span class="categoria"></span>
                         <span class="fecha"></span>
-                        <p class="sub-descripcion">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                            anim id est laborum."</p>
+                        <p class="sub-descripcion"></p>
                     </div>
                 </div>
 
@@ -117,24 +102,24 @@
                     <div class="col-lg-12 col-md-12 col-sm-6 col-6">
                         <div class="card" style="width: 18rem;">
                             <div class="card-body">
-                                <h5 class="card-title">Deportes</h5>
+                                <h5 class="card-title" id="deportes-titulo"></h5>
                             </div>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Aplazada eliminatoria a Qtar</li>
-                                <li class="list-group-item">Juegos intercolegiales 2021</li>
-                                <li class="list-group-item">Camila Osorio Orgullo cucuteño</li>
+                                <li class="list-group-item deportes-titular"></li>
+                                <li class="list-group-item deportes-titular"></li>
+                                <li class="list-group-item deportes-titular"></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-6 col-6">
                         <div class="card" style="width: 18rem;">
                             <div class="card-body">
-                                <h5 class="card-title">Tecnología</h5>
+                                <h5 class="card-title" id="tecnologia-titulo"></h5>
                             </div>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Lanzado el nuevo mundo de among us</li>
-                                <li class="list-group-item">Torneo nacional de robótica</li>
-                                <li class="list-group-item">La importancia de la programación</li>
+                                <li class="list-group-item tecnologia-titular"></li>
+                                <li class="list-group-item tecnologia-titular"></li>
+                                <li class="list-group-item tecnologia-titular"></li>
                             </ul>
                         </div>
                     </div>
@@ -143,7 +128,7 @@
         </section>
         <section class="row">
             <div class="col-lg-10 col-md-10 col-sm-12 col-12">
-                <h3 class="subtitulo text-center">noticias</h3>
+                <h3 class="subtitulo text-center">Todas las noticias</h3>
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-4 col-4">
                         <a class="" href="#">
