--- a/index.html
+++ b/index.html
@@ -133,19 +133,19 @@
                     <div class="col-lg-4 col-md-4 col-sm-4 col-4">
                         <a class="" href="#">
                             <img src="img/logo.png" alt="" class="d-inline-block float-start" id="logo">
-                            <h3>colegio</h3>
+                            <h3>página colegio</h3>
                         </a>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-4 col-4">
                         <a class="" href="#">
                             <img src="img/logo.png" alt="" class="d-inline-block float-start" id="logo">
-                            <h3>colegio</h3>
+                            <h3>correo gmail</h3>
                         </a>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-4 col-4">
                         <a class="" href="#">
                             <img src="img/logo.png" alt="" class="d-inline-block float-start" id="logo">
-                            <h3>colegio</h3>
+                            <h3>pagina santillana</h3>
                         </a>
                     </div>
                 </div>
@@ -153,8 +153,8 @@
             </div>
             <div class="col-lg-2 col-md-2 col-sm-12 col-12">
                 <p>Email: <a href="">periodico@gmail.com</a></p>
-                <p>twitter:</p>
-                <p>dirección:</p>
+                <p>twitter: periodico UFPS</p>
+                <p>dirección: AV 20 N 12-34 Cúcuta</p>
             </div>
 
         </section>
