--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <img src="" class="img-fluid mx-auto d-block" id="foto" alt="fotoPrincipal">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12">
-                        <h3 class="titulo"></h3>
+                        <a href="" class="linkTitulo" ><h3 class="titulo"></h3></a>
                         <span class="categoria"></span>
                         <span class="fecha"></span>
                         <p class="sub-descripcion"></p>
@@ -79,7 +79,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12">
-                        <h3 class="titulo"></h3>
+                        <a href="" class="linkTitulo" ><h3 class="titulo"></h3></a>
                         <span class="categoria"></span>
                         <span class="fecha"></span>
                         <p class="sub-descripcion"></p>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12">
-                        <h3 class="titulo"></h3>
+                        <a href="" class="linkTitulo" ><h3 class="titulo"></h3></a>
                         <span class="categoria"></span>
                         <span class="fecha"></span>
                         <p class="sub-descripcion"></p>
